forum page + create post + comment

--- a/be/config.env
+++ b/be/config.env
@@ -1,5 +1,5 @@
 PORT = 3000
-DB_CONNECTION = mongodb+srv://koalaciu10x:secretmind182@arinacluster.rsvwo.mongodb.net/Edulogy?retryWrites=true&w=majority
+DB_CONNECTION = mongodb+srv://admin:admin@cluster0.0tp1e.mongodb.net/toeic_app?retryWrites=true&w=majority
 SALT_SECRET = $2a$12$t7M3OgpA4ML85VAwnlI10.
 JWT_SECRET = ahjwWIU12
 JWT_EXPIRED_TIME = 3600000
