--- a/fe/package.json
+++ b/fe/package.json
@@ -16,6 +16,7 @@
     "react-loadingg": "^1.7.2",
     "react-paginate": "^7.1.3",
     "react-query": "^3.16.1",
+    "react-quill": "^1.3.5",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
