--- a/fe/package.json
+++ b/fe/package.json
@@ -23,6 +23,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.1",
+    "xlsx": "^0.17.4",
     "yup": "^0.32.9"
   },
   "scripts": {
